--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+updated_at: 11:00AM
 url: "https://cybersecrs.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: Colorchain # the name of your site, e.g. ACME Corp.
